<resources>
    <string name="app_name">ExamProjectContraSoft</string>
    <string name="login_btn">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="bad_credentials">Bad credentials</string>
    <string name="logout_btn">Logout</string>
    <string name="shared_pref_cookie">SharedPrefCookie</string>
    <string name="shared_pref_name">SharedPref</string>
    <string name="check_in_time">Check in</string>
    <string name="check_out_time">Check out</string>
    <string name="check_pause_start">Pause start</string>
    <string name="check_pause_end">Pause end</string>
    <string name="shared_pref_staff_id">staff_id</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">OK</string>
    <string name="check_in_success">Successfully checked in</string>
    <string name="shared_pref_checked_out">isCheckedOut</string>
    <string name="shared_pref_pause_start">isPauseStarted</string>
    <string name="shared_pref_pause_end">isPauseEnded</string>
    <string name="check_out_success">Successfully checked out</string>
    <string name="pause_start_success">Successfully started your pause</string>
    <string name="pause_end_success">Successfully ended your pause</string>
    <string name="back_btn">Back</string>
    <string name="my_worked_date">Date:\u0020</string>
    <string name="my_worked_work_time"><b>Work time:\u0020</b></string>
    <string name="my_worked_total_pause">Total pause:\u0020</string>
    <string name="my_worked_total_worked">Total worked:\u0020</string>
    <string name="my_work_total_time_at_work">Total time at work:\u0020</string>
    <string name="menu_nav_home">Home</string>
    <string name="menu_nav_my_worked">My worked</string>
    <string name="menu_nav_register_time">Time recording</string>
    <string name="my_worked_title">Last 14 work days</string>
    <string name="login_activity_on_failure">Could not login...</string>
    <string name="check_in_message">Are you sure you want to check in?</string>
    <string name="check_in_title">Check In</string>
    <string name="check_out_message">Are you sure you want to check out?</string>
    <string name="check_out_title">Check out</string>
    <string name="pause_start_message">Are you sure you want to start your pause?</string>
    <string name="start_pause_title">Start pause</string>
    <string name="pause_end_message">Are you sure you want to end your pause?</string>
    <string name="pause_end_title">End pause</string>
</resources>
