<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TimeRecord.TimeRecordActivity">

    <Button
        android:id="@+id/checkInBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in_time"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="300dp"
        android:layout_marginStart="50dp"
        />

    <Button
        android:id="@+id/checkOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_out_time"
        android:layout_centerVertical="true"
        android:layout_marginTop="300dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        />

    <Button
        android:id="@+id/checkPauseStartBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_pause_start"
        android:layout_below="@id/checkInBtn"
        android:layout_alignStart="@id/checkInBtn"
        />

    <Button
        android:id="@+id/checkPauseEndBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_pause_end"
        android:layout_below="@id/checkOutBtn"
        android:layout_alignEnd="@id/checkOutBtn"
        />

    <Button
        android:id="@+id/myWorkedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="my worked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />
</RelativeLayout>