<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@drawable/color_home_gradient"
    >


    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/contrasoft"
        app:civ_border_color="@color/color_grey_gradient"
        app:civ_border_width="2dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="@color/color_black_tint"
        android:layout_centerHorizontal="true"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:elevation="15dp"
        app:cardCornerRadius="15dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/email_hint"
                android:textColorHint="@color/color_black_tint"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:theme="@style/TextInputLayoutAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/password_hint"
                android:layout_below="@id/emailInputLayout"
                android:textColorHint="@color/color_black_tint"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:layout_centerInParent="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot password?"
                    android:textSize="12sp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="3dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_button"
                android:textColor="@color/color_white"
                android:text="@string/login_btn"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>




</RelativeLayout>